# depcon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile  release.toml
.github/workflows/: ci.yaml
codegen/: Cargo.toml  README.md
codegen/scripts/: release_hook
codegen/src/: attribute_auto_provide.rs  attribute_provide.rs  derive_injectable.rs  lib.rs  utils.rs
codegen/tests/: attribute_auto_provide.rs  attribute_provide.rs  derive_injectable.rs
codegen/tests/attribute_auto_provide/fail/: attribute_params.rs  attribute_params.stderr  generics.rs  generics.stderr
codegen/tests/attribute_auto_provide/pass/: concrete_generics.rs  simple_trait.rs
codegen/tests/attribute_provide/fail/: attribute_params.rs  attribute_params.stderr  struct_def.rs  struct_def.stderr  struct_impl.rs  struct_impl.stderr
codegen/tests/attribute_provide/pass/: arc.rs
codegen/tests/derive_injectable/fail/: non_static.rs  non_static.stderr
codegen/tests/derive_injectable/pass/: named_struct.rs  tuple_struct.rs  unit_struct.rs
scripts/: release_hook  set_version  utils.py
src/: container.rs  default_provider_hook.rs  error.rs  injectable.rs  lib.rs  macros.rs  provider.rs  resolution.rs  resolver.rs  sync_container.rs  type_info.rs
tests/: integration.rs
tests/fail/: register_non_provider.rs  register_non_provider.stderr
tests/pass/: manual_hook.rs
