[package]
name = "depcon"
version = "0.0.0"
edition = "2021"
description = "Simple & flexible dependency injection framework"
license-file = "LICENSE.txt"
repository = "https://github.com/andybarron/depcon"
keywords = ["dependency-injection", "di", "inversion-of-control", "ioc"]
categories = ["configuration"]

[workspace]
members = [
  "codegen",
]

[dependencies]
depcon_codegen = { path = "./codegen", version = "0.0.0", optional = true }
derivative = "2.2.0"
inventory = "0.2.2"
thiserror = "1.0.30"

[dev-dependencies]
trybuild = "1.0.55"

[features]
default = ["codegen"]
codegen = ["depcon_codegen"]

[workspace.metadata.workspaces]
allow_branch = "main"
