[package]
name = "depcon_codegen"
version = "0.3.0"
edition = "2021"
description = "Code generation macros for depcon dependency injection framework"
license-file = "../LICENSE.txt"
repository = "https://github.com/andybarron/depcon"
keywords = ["codegen", "dependency-injection", "di", "inversion-of-control", "ioc"]
categories = ["config"]

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }

[dev-dependencies]
depcon = { path = ".." }
trybuild = "1.0.55"

[lib]
proc-macro = true
